# hostcraft

./: .gitignore  Cargo.toml  README.md  hosts-copy  install.ps1  install.sh  uninstall.ps1  uninstall.sh
.auto-resolution/cli/: LICENSE
.auto-resolution/core/: Cargo.toml  README.md
.auto-resolution/core/src/: lib.rs
.auto-resolution/core/src/host/: mod.rs
.conflict-base-0/cli/: Cargo.toml
.conflict-side-0/cli/: README.md
.conflict-side-0/core/src/file/: utils.rs
.conflict-side-1/: Cargo.toml
.github/workflows/: cli-release.yaml  release.yml
cli/: Cargo.toml  README.md
cli/src/: command.rs  display.rs  lib.rs  main.rs
cli/src/command/: mod.rs  utils.rs
cli/src/display/: mod.rs  style.rs
cli/src/update/: mod.rs  utils.rs
cli/tests/: integration_tests.rs
core/: Cargo.toml  README.md
core/src/: error.rs  lib.rs  main.rs  platform.rs  tasks.md  tasks.txt
core/src/file/: mod.rs  utils.rs
core/src/host/: mod.rs  utils.rs
core/tests/: integration_tests.rs
gui/: README.md  components.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
gui/src/: App.css  App.tsx  app.css
gui/src-tauri/: Cargo.toml  app.manifest  build.rs  tauri.conf.json
gui/src-tauri/icons/: icon.icns
gui/src-tauri/src/: elevation.rs  lib.rs  main.rs  setup.rs
gui/src-tauri/src/command/: dns.rs  mod.rs  settings.rs  utils.rs
gui/src/components/: app-sidebar.tsx  footer.tsx  layout.tsx  reset-button.tsx  sidebar.tsx  topbar.tsx
gui/src/components/entry-modal/: form.tsx  index.tsx  types.ts  use-entry-modal.ts  utils.ts
gui/src/components/sidebar/: footer.tsx  header.tsx  index.tsx  navigation.tsx
gui/src/components/ui/: badge.tsx  button.tsx  field.tsx  input.tsx  modal.tsx  radio.tsx  reset.tsx  toggle.tsx
gui/src/constants/: app.constant.ts  entries.constant.ts  filters.constant.ts
gui/src/entities/: host.model.ts  settings.model.ts
gui/src/hooks/: use-app-version.ts  use-entries-view.ts  use-settings-view.ts  use-tauri-commands.ts
gui/src/pages/: host-entries.tsx  settings.tsx
gui/src/pages/host-entries/: empty-entries.tsx  empty-search-results.tsx  header.tsx  host-filters.tsx  host-row.tsx  host.model.ts  index.tsx  utils.ts
gui/src/pages/settings/: index.tsx  setting-row.tsx  setting-section.tsx  setting-sections.tsx  utils.ts
gui/src/providers/: entries.provider.tsx  index.ts  settings.provider.tsx  theme.provider.tsx  toast.provider.tsx
gui/src/routes/: +layout.svelte  +page.svelte  index.tsx
gui/src/utils/: app-version.ts  entries.ts  error.ts  settings.ts
