[package]
name = "hostcraft-cli"
version = "0.1.0"
edition = "2024"
authors = ["Sk. Zaber Ahmed"]
description = "CLI for managing your /etc/hosts file"
license = "MIT"
repository = "https://github.com/Zaberahmed/hostcraft"
readme = "README.md"
keywords = ["hosts", "networking", "dns", "cli", "system"]
categories = ["command-line-utilities", "network-programming"]

[[bin]]
name = "hostcraft"
path = "src/main.rs"

[dependencies]
hostcraft-core = "0.1.3"
clap = { version = "4", features = ["derive"] }
anstyle = "1"
anstream = "1"
